--- a/demo1/index.html
+++ b/demo1/index.html
@@ -11,7 +11,9 @@
         <!-- Using the asset management system. -->
         <a-gltf-model src="#rock"></a-gltf-model>
 
-   
+        <a-camera position="20 20 0"></a-camera>
+
+
 
     </a-scene>
 </body>
