--- a/demo1/index.html
+++ b/demo1/index.html
@@ -5,13 +5,13 @@
 <body>
     <a-scene>
         <a-assets>
-            <a-asset-item id="rock" src="rock.gltf"></a-asset-item>
+            <a-asset-item id="test" src="test.gltf"></a-asset-item>
         </a-assets>
 
         <!-- Using the asset management system. -->
-        <a-gltf-model src="#rock"></a-gltf-model>
+        <a-gltf-model src="#test"></a-gltf-model>
 
-        <a-camera position="10 10 0"></a-camera>
+        <a-camera position="10 2 0"></a-camera>
 
 
 
