--- a/demo1/index.html
+++ b/demo1/index.html
@@ -4,6 +4,7 @@
 </head>
 <body>
     <a-scene>
+        <a-scene vr-mode-ui="enabled: false">
         <a-assets>
             <a-asset-item id="test" src="test.gltf"></a-asset-item>
         </a-assets>
