--- a/demo1/index.html
+++ b/demo1/index.html
@@ -3,7 +3,7 @@
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
 </head>
 <body>
-    <a-scene vr-mode-ui="enabled: false" renderer="colorManagement: true" material="shader:standard" background="color: #F0EDEA"  device-orientation-permission-ui="enabled: false"
+    <a-scene loading-screen="enabled: false; vr-mode-ui="enabled: false" renderer="colorManagement: true" material="shader:standard" background="color: #F0EDEA"  device-orientation-permission-ui="enabled: false"
    vr-mode-ui="enabled: false">
       
 
