--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <source src="video/fuxing.webm" type="video/webm">
                 <source src="video/fuxing.mp4" type="video/mp4">
                 <source src="video/fuxing.ogv" type="video/ogg">
+                <img src="img/video_bg.jpg"  title="Your browser does not support the html video">
         </video>
     </section>
 
