--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body>
     <section class="intro">
-        <video class="videoPlayer" muted="" autoplay="" poster="img/back-temp.jpg" id="bgvid">
+        <video class="videoPlayer" muted autoplay playsinline>
                 <source src="video/fuxing.webm" type="video/webm">
                 <source src="video/fuxing.mp4" type="video/mp4">
                 <source src="video/fuxing.ogv" type="video/ogg">
