--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <section>
         <div class="demo">
             <div class="left">
- <iframe src="demo2.html"  frameborder="0"></iframe>
+ <iframe src="demo2.html"  frameborder="0"  scrolling="no"></iframe>
             </div>
             <div class="right">
                 <h3 class="demo_text">Game development</h3>
@@ -64,7 +64,7 @@
         <section>
         <div class="demo">
             <div class="left">
-            <iframe src="demo2.html"  frameborder="0"></iframe>
+            <iframe src="demo2.html"  frameborder="0"  scrolling="no"></iframe>
             </div>
             <div class="right">
                 <h3 class="demo_text">Game development</h3>
