--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
     <section>
         <div class="demo">
             <div class="left">
- <iframe src="demo2.html"  frameborder="0"  scrolling="no"></iframe>
+ <iframe class="iframe-container" src="demo2.html"  frameborder="0"  scrolling="no" ></iframe>
             </div>
             <div class="right">
-                <h3 class="demo_text">Game development</h3>
+                <h3 class="demo_text">Heading</h3>
                 <p  class="demo_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
             </div>
         </div>
@@ -64,10 +64,10 @@
         <section>
         <div class="demo">
             <div class="left">
-            <iframe src="demo2.html"  frameborder="0"  scrolling="no"></iframe>
+            <iframe class="iframe-container" src="demo2.html"  frameborder="0"  scrolling="no"></iframe>
             </div>
             <div class="right">
-                <h3 class="demo_text">Game development</h3>
+                <h3 class="demo_text">Heading</h3>
                 <p  class="demo_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
             </div>
         </div>
