--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 
 <body>
     <section class="intro">
-        <div id="ghost">
-            <img src="img/logo.svg" class="logo">
-            <div class="intro_text">
+        <div>
+            <div id="logo"><img src="img/logo.svg" class="logo"></div>
+            <div class="intro_text" id="ghost">
                 <h2>We are a Berlin based 3D production studio.</h2>
-                <img src="img/arrow.svg" class="arrow">
+                <img src="img/arrow.svg" class="arrow" id="arrow">
             </div>
         </div>
         <video class="videoPlayer" muted autoplay playsinline>
@@ -83,7 +83,9 @@
     
   $(function() {
 
-    $('#ghost').delay(2050).fadeIn('slow');
+    $('#logo').delay(1500).fadeIn('slow');
+    $('#ghost').delay(3000).fadeIn('slow');
+ 
 });
 
 </script>
