--- a/index.html
+++ b/index.html
@@ -73,7 +73,10 @@
         </div>
     </section>
     <section>
-        sadasdasdsad
+        <div class="demo center follow_us">
+        <h3 >Follow us!</h3>
+        <p><a href="">Instagram</a> | <a href="">Linkedin</a></p>
+        </div>
     </section>
     
     
