--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
 
 
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
  
 
   <meta name="description" content="We are a Berlin based 3D production studio focused on Game Developement and the use of AR/VR in products.">
