--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <img src="img/arrow.svg" class="arrow" id="arrow">
             </div>
         </div>
-        <video class="videoPlayer" muted autoplay playsinline>
+        <video class="videoPlayer" muted autoplay>
                 <source src="video/fuxing.webm" type="video/webm">
                 <source src="video/fuxing.mp4" type="video/mp4">
                 <source src="video/fuxing.ogv" type="video/ogg">
