--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                 <img src="img/arrow.svg" class="arrow" id="arrow">
             </div>
         </div>
-        <video class="videoPlayer" muted autoplay>
-                <source src="video/fuxing.webm" type="video/webm">
+        <video class="videoPlayer" muted autoplay playsinline>
                 <source src="video/fuxing.mp4" type="video/mp4">
                 <source src="video/fuxing.ogv" type="video/ogg">
+                <source src="video/fuxing.webm" type="video/webm">
                 <img src="img/video_bg.jpg"  title="Your browser does not support the html video">
         </video>
     </section>
