--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             </div>
         </div>
         <video class="videoPlayer" muted autoplay playsinline>
-                <source src="video/fuxing.mp4" type="video/mp4">
-                <source src="video/fuxing.ogv" type="video/ogg">
-<!--                <source src="video/fuxing.webm" type="video/webm">-->
+                <source src="video/intro.mp4" type="video/mp4">
+                <source src="video/intro.ogv" type="video/ogg">
+<!--                <source src="video/intro.webm" type="video/webm">-->
                 <img src="img/video_bg.jpg"  title="Your browser does not support the html video">
         </video>
     </section>
