--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--    <meta name="viewport" content="width=device-width, initial-scale=1">-->
 
     <title>Ringbahn.io - Berlin based 3D production studio.</title>
 
@@ -35,7 +35,7 @@
 </head>
 
 <body>
-    <section class="intro">
+    <div class="intro">
         <div>
             <div id="logo"><img src="img/logo.svg" class="logo"></div>
             <div class="intro_text" id="ghost">
@@ -43,13 +43,13 @@
                 <img src="img/arrow.svg" class="arrow" id="arrow">
             </div>
         </div>
-        <video class="videoPlayer" muted autoplay playsinline>
+        <video class="videoPlayer foo" muted autoplay playsinline>
             <source src="video/intro.mp4" type="video/mp4">
             <source src="video/intro.ogv" type="video/ogg">
             <!--                <source src="video/intro.webm" type="video/webm">-->
             <img src="img/video_bg.jpg" title="Your browser does not support the html video">
         </video>
-    </section>
+    </div>
     <section>
         <div class="demo_container">
             <div class="left">
