--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <!--    <meta name="viewport" content="width=device-width, initial-scale=1">-->
 
-    <title>Ringbahn.io - Berlin based 3D production studio.</title>
+    <title>Ringbahn.io - Berlin-based 3D production studio focused on game development, XR, and NFT.</title>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
@@ -15,14 +15,14 @@
     <link rel="stylesheet" href="css/style.css">
 
 
-    <meta name="description" content="We are a Berlin based 3D production studio focused on Game Developement and the use of AR/VR in products.">
+    <meta name="description" content="We focus on developing 3D assets for the gaming industry, webGL experiences, and XR use in products and services. We also create unique audio-visual experiences, NFTs, and similar CGI projects.">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 
-    <meta property="og:title" content="Berlin based 3D production studio.">
-    <meta property="og:description" content="We are a Berlin based 3D production studio focused on Game Developement and the use of AR/VR in products.">
+    <meta property="og:title" content="Berlin-based 3D production studio.">
+    <meta property="og:description" content="We focus on developing 3D assets for the gaming industry, webGL experiences, and XR use in products and services. We also create unique audio-visual experiences, NFTs, and similar CGI projects.">
     <meta property="og:image" content="https://www.ringbahn.io/image.jpg">
-    <meta property="og:image:alt" content="Berlin based 3D production studio.">
+    <meta property="og:image:alt" content="Berlin-based 3D production studio.">
     <meta property="og:locale" content="en_GB">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
@@ -39,14 +39,13 @@
         <div>
             <div id="logo"><img src="img/logo.svg" class="logo"></div>
             <div class="intro_text" id="ghost">
-                <h2>We are a Berlin based 3D production studio.</h2>
+                <h2>We are Berlin-based 3D production studio.</h2>
                 <img src="img/arrow.svg" class="arrow" id="arrow">
             </div>
         </div>
         <video class="videoPlayer foo" muted autoplay playsinline>
             <source src="video/intro.mp4" type="video/mp4">
             <source src="video/intro.ogv" type="video/ogg">
-            <!--                <source src="video/intro.webm" type="video/webm">-->
             <img src="img/video_bg.jpg" title="Your browser does not support the html video">
         </video>
     </div>
@@ -58,7 +57,7 @@
             <div class="right">
                 <div class="demo_desc">
                     <h3 class="demo_text">Heading</h3>
-                    <p class="demo_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                    <p class="demo_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
             </div>
         </div>
@@ -93,8 +92,8 @@
     <script>
         $(function() {
 
-            $('#logo').delay(5000).fadeIn('slow');
-            $('#ghost').delay(6000).fadeIn('slow');
+            $('#logo').delay(3000).fadeIn('slow');
+            $('#ghost').delay(5000).fadeIn('slow');
 
         });
 
