--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <!--    <meta name="viewport" content="width=device-width, initial-scale=1">-->
 
-    <title>Ringbahn.io - Berlin-based 3D production studio focused on game development, XR, and NFT.</title>
+    <title>Ringbahn.io - Berlin-based 3D production studio focused on game development, XR.</title>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
@@ -15,12 +15,12 @@
     <link rel="stylesheet" href="css/style.css">
 
 
-    <meta name="description" content="We focus on developing 3D assets for the gaming industry, webGL experiences, and XR use in products and services. We also create unique audio-visual experiences, NFTs, and similar CGI projects.">
+    <meta name="description" content="We focus on developing 3D assets for the gaming industry, webGL experiences, and XR use in products and services. We also create unique audio-visual experiences, and similar CGI projects.">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 
     <meta property="og:title" content="Berlin-based 3D production studio.">
-    <meta property="og:description" content="We focus on developing 3D assets for the gaming industry, webGL experiences, and XR use in products and services. We also create unique audio-visual experiences, NFTs, and similar CGI projects.">
+    <meta property="og:description" content="We focus on developing 3D assets for the gaming industry, webGL experiences, and XR use in products and services. We also create unique audio-visual experiences, and similar CGI projects.">
     <meta property="og:image" content="https://www.ringbahn.io/image.jpg">
     <meta property="og:image:alt" content="Berlin-based 3D production studio.">
     <meta property="og:locale" content="en_GB">
@@ -52,12 +52,12 @@
     <section>
         <div class="demo_container">
             <div class="left">
-                <iframe class="iframe-container" src="demo2.html" frameborder="0" scrolling="no"></iframe>
+                <iframe class="iframe-container" src="demo1.html" frameborder="0" scrolling="no"></iframe>
             </div>
             <div class="right">
                 <div class="demo_desc">
-                    <h3 class="demo_text">Heading</h3>
-                    <p class="demo_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <h3 class="demo_text">GAME ASSETS</h3>
+                    <p class="demo_text">We design game assets that balance the immersive visual experience and match the smoothness of fine-tuned performance.</p>
                 </div>
             </div>
         </div>
@@ -69,8 +69,8 @@
             </div>
             <div class="right">
                 <div class="demo_desc">
-                    <h3 class="demo_text">Heading</h3>
-                    <p class="demo_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                    <h3 class="demo_text">XR & PRODUCTS</h3>
+                    <p class="demo_text">We help products and services to advance their solutions beyond the screen and into the augmentation of the physical reality.</p>
                 </div>
             </div>
         </div>
@@ -80,7 +80,7 @@
         <div class="demo_container">
             <div class="follow_container">
                 <h3>Follow us</h3>
-                <p><a href="">Instagram</a> | <a href="">Linkedin</a></p>
+                <p><a href="https://www.instagram.com/ringbahn.io/" target=”_blank”>Instagram</a> | <a href="https://www.linkedin.com/company/ringbahn-io/" target=”_blank”>Linkedin</a></p>
             </div>
         </div>
     </section>
