--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="right">
                 <div class="demo_desc">
                     <h3 class="demo_text">XR & PRODUCTS</h3>
-                    <p class="demo_text">We help products and services to advance their solutions beyond the screen and into the augmentation of the physical reality.</p>
+                    <p class="demo_text">We help products and services to advance their solutions beyond the screen and into the physical space.</p>
                 </div>
             </div>
         </div>
